# FakeNews-Tribunal

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  tmpclaude-948b-cwd
agents/: base_agent.py  devil_advocate.py  judge.py  orchestrator.py  researcher.py
api/: main.py  rate_limit.py  seed.py
api/middleware/: auth_middleware.py
api/models/: schemas.py
api/routers/: admin.py  analysis.py  auth.py  batch.py  providers.py  webhooks.py
cli/: main.py
core/: config.py  events.py  logging.py  pdf.py  startup_checks.py  webhook_dispatcher.py
db/: models.py  repository.py  session.py
db/migrations/: env.py
db/migrations/versions/: 329f41e1d127_add_is_admin_to_users.py  a1b2c3d4e5f6_add_webhooks_and_batch.py  c9e4f2a8b731_add_is_disabled_to_users.py  f23dd9bb049f_initial_schema.py
llm/: provider.py
tests/integration/: test_api.py  test_debate_flow.py
tests/unit/: test_api_auth.py  test_credibility.py  test_judge.py  test_orchestrator.py  test_pdf.py  test_schemas.py  test_search.py
tools/: credibility.py  search.py
web/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tmpclaude-ca88-cwd
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/batch/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/login/: page.tsx
web/src/app/profile/: page.tsx
web/src/app/register/: page.tsx
web/src/components/: DebateRoundCard.tsx  Navbar.tsx  SourceCard.tsx  VerdictBadge.tsx
web/src/lib/: api.ts  auth-context.tsx
(+4 files in other folders)
